Implement comprehensive SEO optimization: structured data, semantic HTML, accessibility, and meta tags

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <title>APEX BUILD - 프리미엄 게이밍 PC & 워크스테이션</title>
     <meta name="title" content="APEX BUILD - 프리미엄 게이밍 PC & 워크스테이션" />
     <meta name="description" content="최고 성능의 게이밍 PC와 워크스테이션을 만나보세요. 맞춤 제작부터 프리미엄 PC까지, APEX BUILD에서 완벽한 PC를 경험하세요." />
+    <meta name="keywords" content="게이밍 PC, 조립 PC, 워크스테이션, 프리미엄 PC, 맞춤 PC, 고성능 컴퓨터, RTX 4090, 게이밍 컴퓨터, PC 조립, 컴퓨터 견적" />
+    <meta name="author" content="APEX BUILD" />
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+    <meta name="language" content="Korean" />
+    <meta name="revisit-after" content="7 days" />
+    <link rel="canonical" href="https://luxury-ecommerce-website.vercel.app/" />
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
